Flatten Maven project (#386)